fixed border wrap and back btn casing

--- a/src/country.css
+++ b/src/country.css
@@ -18,7 +18,6 @@
 .btn .btn-txt{
   margin-left: 10px;
   font-weight: 300;
-  text-transform: lowercase;
 }
 
 .country article .country-details div{
@@ -103,23 +102,20 @@ font-weight: 900;
         padding-left: 25px;
         padding-right: 30px;
         margin-left: 170px;
-        margin-top: 80px;
+        margin-top: 60px;
         
         
     }
-
     .country article .country-details{
       margin-top: -30px;
     }
-    .country article .flag{
-      margin-top: 10px;
-    }
+
 
     .country article .country-inner {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         gap: 50px;
-      }
+    }
 
       .country article .flag img{
         border-radius: 10px;
@@ -129,17 +125,25 @@ font-weight: 900;
 
       }
 
+      .country article .borders{
+      margin-top: -10px;
+      }
+
     
       .country .country-details {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         gap: 30px;
-        margin-left: 120px;
+        margin-left: 70px;
       }
 
       .country article .border-bottom{
-        margin-left: 60%;
+        margin-left: 57%;
         margin-top: -150px;
+        display: flex;
+      }
+      .country article .border-bottom .borders{
+        margin-left: 10px
       }
       .country article .country-details .right{
         margin-top: 28%;
